# convfinqa-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/cli/: __init__.py  error_handler.py  main.py
src/core/: __init__.py  conversation.py  dspy_manager.py  error_handler.py  exceptions.py  financial_terms.py  models.py  numeric_utils.py
src/data/: __init__.py  loader.py
src/evaluation/: __init__.py  dspy_extraction.py  metrics.py
src/functions/: __init__.py  agent.py  dspy_signatures.py  math.py  query_parser.py  table_analyzer.py  tools.py
tests/: __init__.py  conftest.py
tests/core/: test_conversation.py
tests/data/: __init__.py  test_loader.py
tests/evaluation/: __init__.py  test_agent_evaluation.py  test_financial_accuracy.py  test_financial_relevance.py
tests/functions/: __init__.py  test_agent.py  test_math.py  test_tools.py
